Reapply "userside"
This reverts commit 785670e1c6db05f5d0c5557e872b706e09f1da16.